# ShopMarket

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  README.md  docker-compose.yml  docker.env  entrypoint.sh  manage.py  pyproject.toml
accounts/: forms.py  models.py  views.py
accounts/migrations/: 0001_initial.py
cart/: cart.py  urls.py  views.py
cart/templatetags/: cart_filters.py
catalog/: admin.py  context_processors.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_product_is_featured.py  0003_product_image.py
cms/: admin.py  models.py
cms/migrations/: 0001_initial.py  0002_alter_banner_image.py
lists/: admin.py  models.py  urls.py  views.py
lists/migrations/: 0001_initial.py
orders/: admin.py  models.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_order_cash_change_alter_order_payment_method.py
pricing/: admin.py  models.py
pricing/migrations/: 0001_initial.py
shopmarket/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: auth.css  mobile-spacing.css  mobile.css  style.css  theme.css
stores/: admin.py  context_processors.py  middleware.py  models.py  urls.py  views.py
stores/migrations/: 0001_initial.py
templates/: base.html
templates/cart/: cart_detail.html
templates/catalog/: category_list.html  home.html  offers.html  product_detail.html  search.html
templates/components/: cart_summary.html  product_card.html
templates/lists/: list_create.html  list_detail.html  list_view.html
tools/: validate_cart.py  validate_cart_ajax.py  validate_cart_http.py
(+15 files in other folders)
