[project]
name = "shopmarket"
version = "0.1.0"
description = "ShopMarket - Supermarket E-commerce MVP"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0,<6.0",
    "pillow>=10.0.0",
    "psycopg2-binary>=2.9.0",
    "gunicorn>=21.0.0",
    "dj-database-url>=2.1.0",
    "whitenoise>=6.6.0",
]
